Retail Lending-Production/src/objects/loans__c.object
<CustomObject>
    <fields>
        <fullName>ASSIGNED_TO__c</fullName>
        <description>ENTER THE NAME OF THE PERSON YOU ARE ASSIGNING THIS DATA</description>
        <inlineHelpText>ENTER THE NAME OF THE PERSON YOU ARE ASSIGNING THIS DATA</inlineHelpText>
        <label>ASSIGNED TO</label>
        <picklist>
            <picklistValues>
                <fullName>ANSARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BABU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MADHUMITA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RITU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAIKAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUKANYA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWEETY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joyashree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nidhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rohit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanti</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adjustable_Max__c</fullName>
        <label>Adjustable Max %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Adjustable_Min__c</fullName>
        <label>Adjustable Min %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Adjustable_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adjustable Rate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amm_Term_Yrs__c</fullName>
        <label>Amm Term (Yrs)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Applied__c</fullName>
        <inlineHelpText>Amount Applied is the Loan Amount from the lead page</inlineHelpText>
        <label>Amount  Applied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Sanctioned__c</fullName>
        <inlineHelpText>The amount of loan Can be sanctioned to the customer</inlineHelpText>
        <label>Amount Sanctioned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_to_start_Disbursement__c</fullName>
        <description>if(ispickval( MMR_Choosen__c , &apos;Parallel Funding&apos;), Property_Cost__c * Required_for_disbursement__c,  MMR__c )</description>
        <formula>IF(Property_Cost__c * Required_for_disbursement__c&lt;&gt;0,Property_Cost__c * Required_for_disbursement__c,MMR__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount to Start Disbursement= IF parallel funding=(Property Cost * % Required to start Disbursement )
ELSE = MMR.</inlineHelpText>
        <label>Amount to start Disbursement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assumable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assumable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balloon_Due_Date__c</fullName>
        <label>Balloon Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Balloon_Expected__c</fullName>
        <label>Balloon $ Expected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balloon_Term_Yrs__c</fullName>
        <label>Balloon Term (Yrs)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Banks_Approved_Count__c</fullName>
        <label>Banks Approved Count</label>
        <summaryFilterItems>
            <field>Bank_Approached__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Agreed to Disburse</value>
        </summaryFilterItems>
        <summaryForeignKey>Bank_Approached__c.Loan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Borrower_Email__c</fullName>
        <description>This is to capture the email of borrower</description>
        <label>Borrower Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Borrower__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Borrower</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMV__c</fullName>
        <inlineHelpText>Enter the percentage of LTV for CMV it should not be more than 80%</inlineHelpText>
        <label>Permissible LTV(CMV)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CREATED_BY__c</fullName>
        <description>ENTER THE NAME OF THE PERSON CREATING THIS DATA</description>
        <label>CREATED BY</label>
        <picklist>
            <picklistValues>
                <fullName>ANSARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BABU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MADHUMITA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RITU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAIKAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUKANYA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWEETY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joyashree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nidhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rohit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanti</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Adjustable_Rate__c</fullName>
        <label>Current Adjustable Rate%</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Market_Value__c</fullName>
        <inlineHelpText>Enter the amount for current market value of the property.</inlineHelpText>
        <label>Current Market Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Prime_Rate__c</fullName>
        <label>Current Prime+ Rate %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Disbursement_Pattern__c</fullName>
        <inlineHelpText>Disbursement Pattern like&quot;10:80:10 or 20:80&quot;-- THIS HAS NOT BEEN IMPLEMENTED YET</inlineHelpText>
        <label>Disbursement Pattern</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elgibility__c</fullName>
        <label>Elgibility</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Interest_Rate__c</fullName>
        <label>Fixed Interest Rate %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Guarantor_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guarantor Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guarantor_Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guarantor Individual</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loans (Guarantor Individual)</relationshipLabel>
        <relationshipName>Loans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Type__c</fullName>
        <label>Interest Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime + %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIBOR + %</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LTV_Agreement__c</fullName>
        <inlineHelpText>The agreement value of loan</inlineHelpText>
        <label>Loan to value(Agreement)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LTV_Market__c</fullName>
        <inlineHelpText>The value of loan through market</inlineHelpText>
        <label>Loan to value(Market)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LTV__c</fullName>
        <label>% LTV</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LTV_val__c</fullName>
        <formula>Max_Loan_Permissible__c / Property_Cost__c</formula>
        <inlineHelpText>Amount Disbursable /  Property Cost = LTV</inlineHelpText>
        <label>Final LTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Name__c</fullName>
        <label>Lead Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lender_1__c</fullName>
        <label>Lender.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lender_Appraisal__c</fullName>
        <label>Lender Appraisal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lender_Contact_Email_ID__c</fullName>
        <label>Lender Contact Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lender_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lender Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loans (Lender Contact)</relationshipLabel>
        <relationshipName>Loans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lender</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loans (Lender)</relationshipLabel>
        <relationshipName>Loans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lien_Position__c</fullName>
        <label>Lien Position</label>
        <picklist>
            <picklistValues>
                <fullName>First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Maturity_Date__c</fullName>
        <label>Loan Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Process_Fees__c</fullName>
        <label>Loan Process Fees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Ref_No__c</fullName>
        <label>Loan Ref.No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Start_Date__c</fullName>
        <label>Loan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Status__c</fullName>
        <label>Loan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current / Full Disbursed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Disbursed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreclosure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank NPA/REO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MMR_Choosen__c</fullName>
        <inlineHelpText>The MMR chosen is type of:Parallel or 100%</inlineHelpText>
        <label>MMR Choosen</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMR_Ratio__c</fullName>
        <formula>(MMR__c / Property_Cost__c)</formula>
        <label>MMR Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MMR__c</fullName>
        <formula>Property_Cost__c -  Max_Loan_Permissible__c</formula>
        <inlineHelpText>The value of Cost of Property-Amount Disbursable= MMR</inlineHelpText>
        <label>MMR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Markup_on_Prime__c</fullName>
        <label>Markup % on Prime</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Loan_Permissible__c</fullName>
        <description>F( (Property_Cost__c * LTV_Agreement__c)&lt; Amount_Sanctioned__c, Property_Cost__c * LTV_Agreement__c, Amount_Sanctioned__c) its  a formula field</description>
        <formula>MIN( Amount_Sanctioned__c , Total_CMV__c , Total_Property_cost__c )</formula>
        <inlineHelpText>Amount Disbursable=Lesser of Amount of CMV, Amount of COP and Amount Sanctioned</inlineHelpText>
        <label>Amount Disbursable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_of_Bank_Approval_Status__c</fullName>
        <description>This Field is created to update the latest stage on loan based on latest stage in Bank approved.</description>
        <label>Max of Bank Approval Status</label>
        <summarizedField>Bank_Approached__c.Status_Number__c</summarizedField>
        <summaryFilterItems>
            <field>Bank_Approached__c.Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected by bank, Rejected by Borrower</value>
        </summaryFilterItems>
        <summaryForeignKey>Bank_Approached__c.Loan__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Own_Contribution__c</fullName>
        <inlineHelpText>The amount of money from the person for purchasing the property</inlineHelpText>
        <label>MMR Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prepayment_Penalty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prepayment Penalty?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prime_Rate__c</fullName>
        <label>Prime Rate %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>The products of Retail lending</description>
        <inlineHelpText>Choose the product name Eg: Home Loan,Balance Transfer,etc.</inlineHelpText>
        <label>Loan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home Loan/Property Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan/Property Not Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan Balance Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan against property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan against property(BT/BTTP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Rental Discounting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tower</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Cost__c</fullName>
        <inlineHelpText>Enter the Property Cost for the Property</inlineHelpText>
        <label>Property Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_cost_p__c</fullName>
        <inlineHelpText>Enter the percentage of LTV for COP it should not be more than 80%</inlineHelpText>
        <label>Permissible LTV(COP)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Property_use__c</fullName>
        <label>Property use</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recourse__c</fullName>
        <label>Recourse</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Recourse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Recourse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Recourse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_for_disbursement__c</fullName>
        <inlineHelpText>Enter the Amount of Percentage to start Disbursement &quot;Eg:10%,15%or 20%&quot;</inlineHelpText>
        <label>% Required for disbursement</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_CMV__c</fullName>
        <formula>Current_Market_Value__c * CMV__c</formula>
        <inlineHelpText>Current Market Value *Permissible LTV on CMV=Amount of CMV</inlineHelpText>
        <label>Amount of CMV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Property_cost__c</fullName>
        <formula>Property_Cost__c * Property_cost_p__c</formula>
        <inlineHelpText>Property Cost*Permissible LTV on COP=Amount of COP</inlineHelpText>
        <label>Amount of COP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Usdfor_reporting__c</fullName>
        <description>This is used for a reporting no for any internal use. Dont delete this field</description>
        <formula>if(Today()-DateValue(LastModifiedDate)&gt;=5,5,Today()-DateValue(LastModifiedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usdfor reporting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Loan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Usdfor_reporting__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <recordTypes>
        <fullName>Business_Loan</fullName>
        <active>true</active>
        <description>Record Type of Business Loan</description>
        <label>Business Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Car_Loan</fullName>
        <active>true</active>
        <description>Record Type for Car Loan</description>
        <label>Car Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Card</fullName>
        <active>true</active>
        <description>Record Type for Credit Card</description>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Education_Loan</fullName>
        <active>true</active>
        <description>Record Type for Education Loan</description>
        <label>Education Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home_Loan</fullName>
        <active>true</active>
        <description>Record Type for Home Loan</description>
        <label>Home Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Personal_Loan</fullName>
        <active>true</active>
        <description>Record Type for Personal Loan</description>
        <label>Personal Loan</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Amount_Sanctioned_Should_be_Less</fullName>
        <active>true</active>
        <description>This validates the Amount Sanctioned is less than the Amount Disbursable.</description>
        <errorConditionFormula>Amount_Sanctioned__c &lt;Max_Loan_Permissible__c</errorConditionFormula>
        <errorDisplayField>Amount_Sanctioned__c</errorDisplayField>
        <errorMessage>Amount Sanctioned cannot be greater than the Amount Disbursable.</errorMessage>
    </validationRules>
</CustomObject>